--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <link rel="stylesheet" href="./static/css/image-comparison-slider.css"/> -->
 
   <!-- nerfies -->
-  <script src="./static/js/index.js"></script>
+  <script src="./static/js/index_nerfies.js"></script>
   <!-- reconfusion -->
   <script src="./static/js/app.js"></script>
   
@@ -163,15 +163,16 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <!-- <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
-                   class="external-link button is-normal is-rounded is-dark">
+              <span class="link-block">
+                <a href="static/files/paper.pdf"
+                   class="external-link button is-normal is-rounded is-dark"
+                   target="_blank">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
                 </a>
-              </span> -->
+              </span>
               <span class="link-block">
                 <a 
                    class="external-link button is-normal is-rounded is-dark" disabled
@@ -626,6 +627,14 @@
     </div>
   </div>
 </footer>
+
+<div style="text-align: center;">
+  <a href="#">
+      <button class="backButton">
+          Back to Top
+      </button>
+  </a>
+</div>
 
 </body>
 </html>
