Update Google Analytics tracking ID

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <!-- visiting analytics -->
   <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-0K35Z58E01"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CCSP06NGG6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-0K35Z58E01');
-  </script> -->
+    gtag('config', 'G-CCSP06NGG6');
+  </script>
 
   <!-- <link rel="icon" href="./static/images/favicon.svg"> -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🕒</text></svg>">
