--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 </a>
               </span>
               <span class="link-block">
-                <a 
-                   class="external-link button is-normal is-rounded is-dark" disabled
+                <a href="https://arxiv.org/abs/2411.14521"
+                   class="external-link button is-normal is-rounded is-dark"
                    target="_blank">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -591,9 +591,15 @@
 <section class="section" id="bib">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{
-      coming soon
-}</code></pre>
+    <pre><code>@misc{qi2024mytimemachinepersonalizedfacialage,
+      title={MyTimeMachine: Personalized Facial Age Transformation}, 
+      author={Luchao Qi and Jiaye Wu and Bang Gong and Annie N. Wang and David W. Jacobs and Roni Sengupta},
+      year={2024},
+      eprint={2411.14521},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2411.14521}, 
+  }</code></pre>
   </div>
 </section>
 
