--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
   <script src="./static/js/app.js"></script>
   
 </head>
-<body>
 
+<body class="has-navbar-fixed-top">
+<!-- https://bulma.io/documentation/components/navbar/ -->
 
+<!-- ------------------------------- navbar ------------------------------- -->
 <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
@@ -554,7 +556,7 @@
     <h2 class="title is-3">Acknowledgements</h2>
     <div class="content">
       <p>
-        We thank Noah Frahm for reviewing early drafts and suggesting improvements. We thank Yiran Xu for providing helpful suggestions. 
+        We thank Noah Frahm for reviewing early drafts and suggesting helpful improvements. We thank Yiran Xu for thoughtful discussions and feedback during the course of this research. 
         <!-- This work was supported by the National Science Foundation (NSF) under grant number xxx. We also thank the UNC Research Computing for providing computing resources. -->
       </p>
     </div>
