--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>The University of North Carolina at Chapel Hill,</span>
-            <span class="author-block"><sup>2</sup>The University of Maryland</span>
+            <span class="author-block"><sup>1</sup>UNC Chapel Hill</span>
+            <span class="author-block"><sup>2</sup>University of Maryland</span>
           </div>
 
           <div class="column has-text-centered">
@@ -227,6 +227,28 @@
                   <span>Data</span>
                   </a>
               </span> -->
+              <!-- <br> -->
+              <!-- tweet / x -->
+              <span class="link-block"></span>
+                <a href="https://x.com/QiLuchao/status/1861796072227832218"
+                   class="external-link button is-normal is-rounded is-dark"
+                   target="_blank">
+                  <span class="icon">
+                    <i class="fa-brands fa-x-twitter"></i>
+                  </span>
+                  <span>AK Tweet</span>
+                </a>
+              </span>
+              <span class="link-block"></span>
+                <a href="https://techxplore.com/news/2024-12-ai-powered-algorithm-enables-personalized.html"
+                   class="external-link button is-normal is-rounded is-dark"
+                   target="_blank">
+                  <span class="icon">
+                    <i class="fa-solid fa-chevron-right"></i>
+                  </span>
+                  <span>TechXplore</span>
+                </a>
+              </span>
             </div>
 
           </div>
