--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
   <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
   <!-- icons -->
-  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+  <!-- <link rel="stylesheet" href="./static/css/fontawesome.all.min.css"> -->
   <!-- https://jpswalsh.github.io/academicons/ -->
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
@@ -51,9 +51,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <!-- <script defer src="./static/js/fontawesome.all.min.js"></script> -->
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
+
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/0717dd2a06.js" crossorigin="anonymous"></script>
 
   <!-- mathjax -->
   <!-- https://docs.mathjax.org/en/latest/web/configuration.html#using-a-local-file-for-configuration -->
@@ -158,8 +161,8 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>The University of North Carolina at Chapel Hill,</span>
-            <span class="author-block"><sup>2</sup>The University of Maryland</span>
+            <span class="author-block"><sup>1</sup>UNC Chapel Hill</span>
+            <span class="author-block"><sup>2</sup>University of Maryland</span>
           </div>
 
           <div class="column has-text-centered">
@@ -227,6 +230,28 @@
                   <span>Data</span>
                   </a>
               </span> -->
+              <!-- <br> -->
+              <!-- tweet / x -->
+              <span class="link-block"></span>
+                <a href="https://x.com/QiLuchao/status/1861796072227832218"
+                   class="external-link button is-normal is-rounded is-dark"
+                   target="_blank">
+                  <span class="icon">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                  </span>
+                  <span>AK Tweet</span>
+                </a>
+              </span>
+              <span class="link-block"></span>
+                <a href="https://techxplore.com/news/2024-12-ai-powered-algorithm-enables-personalized.html"
+                   class="external-link button is-normal is-rounded is-dark"
+                   target="_blank">
+                  <span class="icon">
+                    <i class="fa-solid fa-circle-chevron-right"></i>
+                  </span>
+                  <span>TechXplore</span>
+                </a>
+              </span>
             </div>
 
           </div>
