--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">MyTimeMachine: Personalized Facial Age Transformation</h1>
+          <h1 class="subtitle is-3 publication-subtitle">SIGGRAPH 2025 (Journal Track)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://luchaoqi.com/">Luchao Qi</a><sup>1</sup>,</span>
@@ -163,6 +164,8 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>UNC Chapel Hill</span>
             <span class="author-block"><sup>2</sup>University of Maryland</span>
+            <!-- <br>
+            <span class="author-block"><b>SIGGRAPH 2025</b></span> -->
           </div>
 
           <div class="column has-text-centered">
@@ -206,7 +209,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon)</span>
+                  <span>Code</span>
                 </a>
               </span>
               <!-- Supplementary Link. -->
@@ -230,10 +233,10 @@
                   <span>Data</span>
                   </a>
               </span> -->
-              <!-- <br> -->
+              <br>
               <!-- tweet / x -->
               <span class="link-block"></span>
-                <a href="https://x.com/QiLuchao/status/1861796072227832218"
+                <a href="https://x.com/_akhaliq/status/1860926024961122412"
                    class="external-link button is-normal is-rounded is-dark"
                    target="_blank">
                   <span class="icon">
@@ -582,6 +585,7 @@
     <div class="content">
       <p>
         We thank Noah Frahm for reviewing early drafts and suggesting helpful improvements. We thank Yiran Xu for thoughtful discussions and feedback during the course of this research. 
+        This research was partially funded by Lenovo Research (Morrisville, NC). We are grateful to the members of the Mobile Technology Innovations Lab for their support and assistance.
         <!-- This work was supported by the National Science Foundation (NSF) under grant number xxx. We also thank the UNC Research Computing for providing computing resources. -->
       </p>
     </div>
