add github code

--- a/index.html
+++ b/index.html
@@ -206,11 +206,21 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a 
+                <!-- <a 
                    class="external-link button is-normal is-rounded is-dark" disabled
                    target="_blank">
                   <span class="icon">
                       <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                </a> -->
+                <a
+                  class="external-link button is-normal is-rounded is-dark"
+                  target="_blank"
+                  href="https://github.com/luchaoqi/mytimemachine"
+                >
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
                 </a>
@@ -639,15 +649,19 @@
 <section class="section" id="bib">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{qi2024mytimemachinepersonalizedfacialage,
-      title={MyTimeMachine: Personalized Facial Age Transformation}, 
-      author={Luchao Qi and Jiaye Wu and Bang Gong and Annie N. Wang and David W. Jacobs and Roni Sengupta},
-      year={2024},
-      eprint={2411.14521},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2411.14521}, 
-  }</code></pre>
+    <pre><code>@article{qiMyTimeMachinePersonalizedFacial2025,
+      title = {{{MyTimeMachine}}: {{Personalized Facial Age Transformation}}},
+      shorttitle = {{{MyTimeMachine}}},
+      author = {Qi, Luchao and Wu, Jiaye and Gong, Bang and Wang, Annie N. and Jacobs, David W. and Sengupta, Roni},
+      date = {2025-07-27},
+      journaltitle = {ACM Trans. Graph.},
+      volume = {44},
+      number = {4},
+      pages = {140:1--140:16},
+      issn = {0730-0301},
+      doi = {10.1145/3731172},
+      url = {https://dl.acm.org/doi/10.1145/3731172},
+    }</code></pre>
   </div>
 </section>
 
