--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">MyTimeMachine: Personalized Facial Age Transformation</h1>
+          <h1 class="title is-1 publication-title">
+            <span class="gradient-color-text">MyTimeMachine</span>
+            : Personalized Facial Age Transformation
+          </h1>
           <h1 class="subtitle is-3 publication-subtitle">SIGGRAPH 2025 (Journal Track)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
